--- a/home.html
+++ b/home.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jobs</title>
+    <title>Home</title>
     <link rel="stylesheet" href="app.css">
 </head>
-
 <body>
-    <nav>
-        <a href="/profile" class="profile">
-            <img src="https://placehold.co/40x40" alt="Profile">
-        </a>
-        <a href="" class="link">
-            <img src="notification.svg" alt="Logout">
-        </a>
-    </nav>
     <section>
         <div class="cards">
+            <button id="nope" class="nope">No</button>
+            <button id="love" class="love">Yes</button>
+
             <div class="job">
                 <h2>Desarrollador Frontend</h2>
                 <ul>
@@ -201,20 +194,106 @@
             </div>
         </div>
     </section>
-    <footer>
-        <a href="/home" title="Home" class="link">
-            <img src="home.svg" alt="Home">
-        </a>
-        <a href="/career" title="Career" class="link">
-            <img src="career.svg" alt="Career">
-        </a>
-        <a href="/cv" title="CV" class="link">
-            <img src="cv.svg" alt="CV">
-        </a>
-        <a href="/post" title="Post" class="link">
-            <img src="post.svg" alt="Post">
-        </a>
-    </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
+<script type="text/javascript" src="app.js"></script>
+<script>
+    'use strict';
 
+// Updated selectors to match your HTML
+var tinderContainer = document.querySelector('.cards');
+var allCards = document.querySelectorAll('.job');
+var nope = document.getElementById('nope');
+var love = document.getElementById('love');
+
+function initCards() {
+  var newCards = document.querySelectorAll('.job:not(.removed)');
+
+  newCards.forEach(function (card, index) {
+    card.style.zIndex = newCards.length - index;
+    card.style.transform = 'scale(' + (20 - index) / 20 + ') translateY(-' + 30 * index + 'px)';
+    card.style.opacity = (10 - index) / 10;
+  });
+
+  tinderContainer.classList.add('loaded');
+}
+
+initCards();
+
+allCards.forEach(function (el) {
+  var hammertime = new Hammer(el);
+
+  hammertime.on('pan', function (event) {
+    el.classList.add('moving');
+  });
+
+  hammertime.on('pan', function (event) {
+    if (event.deltaX === 0 && event.deltaY === 0) return;
+
+    tinderContainer.classList.toggle('tinder_love', event.deltaX > 0);
+    tinderContainer.classList.toggle('tinder_nope', event.deltaX < 0);
+
+    var xMulti = event.deltaX * 0.03;
+    var yMulti = event.deltaY / 80;
+    var rotate = xMulti * yMulti;
+
+    el.style.transform = 'translate(' + event.deltaX + 'px, ' + event.deltaY + 'px) rotate(' + rotate + 'deg)';
+  });
+
+  hammertime.on('panend', function (event) {
+    el.classList.remove('moving');
+    tinderContainer.classList.remove('tinder_love');
+    tinderContainer.classList.remove('tinder_nope');
+
+    var moveOutWidth = document.body.clientWidth;
+    var keep = Math.abs(event.deltaX) < 80 || Math.abs(event.velocityX) < 0.5;
+
+    el.classList.toggle('removed', !keep);
+
+    if (keep) {
+      el.style.transform = '';
+    } else {
+      var endX = Math.max(Math.abs(event.velocityX) * moveOutWidth, moveOutWidth);
+      var toX = event.deltaX > 0 ? endX : -endX;
+      var endY = Math.abs(event.velocityY) * moveOutWidth;
+      var toY = event.deltaY > 0 ? endY : -endY;
+      var xMulti = event.deltaX * 0.03;
+      var yMulti = event.deltaY / 80;
+      var rotate = xMulti * yMulti;
+
+      el.style.transform = 'translate(' + toX + 'px, ' + (toY + event.deltaY) + 'px) rotate(' + rotate + 'deg)';
+      initCards();
+    }
+  });
+});
+
+function createButtonListener(love) {
+  return function (event) {
+    var cards = document.querySelectorAll('.job:not(.removed)');
+    var moveOutWidth = document.body.clientWidth * 1.5;
+
+    if (!cards.length) return false;
+
+    var card = cards[0];
+
+    card.classList.add('removed');
+
+    if (love) {
+      card.style.transform = 'translate(' + moveOutWidth + 'px, -100px) rotate(-30deg)';
+    } else {
+      card.style.transform = 'translate(-' + moveOutWidth + 'px, -100px) rotate(30deg)';
+    }
+
+    initCards();
+    event.preventDefault();
+  };
+}
+
+var nopeListener = createButtonListener(false);
+var loveListener = createButtonListener(true);
+
+nope.addEventListener('click', nopeListener);
+love.addEventListener('click', loveListener);
+
+</script>
 </html>
