add swipe buttons

--- a/home.html
+++ b/home.html
@@ -9,8 +9,12 @@
 <body>
     <section>
         <div class="cards">
-            <button id="nope" class="nope">No</button>
-            <button id="love" class="love">Yes</button>
+            <button id="nope" class="nope">
+                <svg xmlns="http://www.w3.org/2000/svg" id="Outline" height="512" viewBox="0 0 16 16" width="512"><path d="m7.6528.54a1.1361 1.1361 0 0 0 -1.2959.5367l-4.7094 8.2553a1.1048 1.1048 0 0 0 .0048 1.1128 1.1363 1.1363 0 0 0 .9937.5679h4.854v3.3579a1.1182 1.1182 0 0 0 .8472 1.0894 1.1975 1.1975 0 0 0 .3071.04 1.1293 1.1293 0 0 0 .9888-.5772l4.7094-8.2548a1.1048 1.1048 0 0 0 -.0048-1.1128 1.1363 1.1363 0 0 0 -.9937-.5679h-4.854v-3.3579a1.1182 1.1182 0 0 0 -.8472-1.0894zm5.7012 5.4473a.1415.1415 0 0 1 .1294.07.11.11 0 0 1 .0005.1153l-4.7095 8.2556a.141.141 0 0 1 -.1709.0655.1179.1179 0 0 1 -.1035-.1231v-3.8579a.5.5 0 0 0 -.5-.5h-5.354a.1413.1413 0 0 1 -.1294-.07.11.11 0 0 1 -.0005-.1153l4.709-8.2553a.1311.1311 0 0 1 .12-.0723.2134.2134 0 0 1 .0513.0068.1179.1179 0 0 1 .1036.1228v3.8579a.5.5 0 0 0 .5.5z"/></svg>
+            </button>
+            <button id="love" class="love">
+                <svg xmlns="http://www.w3.org/2000/svg" id="Expand" height="512" viewBox="0 0 16 16" width="512"><path d="m1.6387 2.6606a3.9983 3.9983 0 0 0 0 5.585l6.0049 6.105a.5.5 0 0 0 .7128 0l6.0049-6.105a3.9983 3.9983 0 0 0 0-5.585 3.95 3.95 0 0 0 -5.5166 0l-.8447.8594-.8447-.8589a3.95 3.95 0 0 0 -5.5166-.0005zm6.7177 1.9224 1.2012-1.2212a2.9265 2.9265 0 0 1 4.0908 0 2.9949 2.9949 0 0 1 0 4.1826l-5.6484 5.7427-5.6484-5.7427a2.9949 2.9949 0 0 1 0-4.1826 2.8582 2.8582 0 0 1 4.0908 0l1.2012 1.2212a.5142.5142 0 0 0 .7128 0z"/></svg>
+            </button>
 
             <div class="job">
                 <h2>Desarrollador Frontend</h2>
